fixed sign up, reviews are readable.

--- a/client/hashbrowns-ui/src/components/AddRecipeForm.css
+++ b/client/hashbrowns-ui/src/components/AddRecipeForm.css
@@ -19,10 +19,7 @@
     font-size: large;
 }
 
-.inputForm > input{
-    height: 40px;
-    font-size: medium;
-}
+
 
 
 .descriptionRecipe{
